force-app/main/default/objects/Account/fields/Branches__c.field-meta.xml
<CustomField>
    <fullName>Branches__c</fullName>
    <label>Branches agréées</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>RD</fullName>
            </value>
            <value>
                <fullName>Autocorporel</fullName>
            </value>
            <value>
                <fullName>Santé</fullName>
            </value>
            <value>
                <fullName>RC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>