force-app/main/default/objects/Account/fields/FileUploaded__c.field-meta.xml
<CustomField>
    <fullName>FileUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is File Uploaded</label>
    <type>Checkbox</type>
</CustomField>