force-app/main/default/objects/Account/fields/has_file_uploaded__c.field-meta.xml
<CustomField>
    <fullName>has_file_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has_file_uploaded</label>
    <type>Checkbox</type>
</CustomField>